feat: transaction tests